# CppProjectSimpleTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  version.h.in
lib/tools/inc/: algos.h  utils.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  toolsTest.cc
